# floe-guard

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish-npm.yml  publish.yml  refresh-cost-map.yml  version-guard.yml
docs/: INSTRUMENTATION.md  stop-the-loop.gif.PLACEHOLDER.txt
examples/: anthropic_adapter.py  budget_aware.py  budget_retry.py  langchain_groq_example.py  langgraph_budget_aware.py  openai_adapter.py  runaway_loop.py  streaming_guard.py  tool_budget.py  voice_turn_budget.py
js/: README.md  package-lock.json  package.json  tsconfig.json
js/src/: cost_map.json  errors.ts  guard.ts  index.ts  latency.ts  middleware.ts  pricing.ts  retry.ts
js/test/: advisory.test.ts  concurrency.test.ts  latency.test.ts  middleware.test.ts  pricing.test.ts  retry.test.ts  spend-log.test.ts  tool-costs.test.ts
scripts/: metrics.py  update-cost-map.mjs
src/floe_guard/: __init__.py  cost_map.json  errors.py  guard.py  hosted.py  latency.py  pricing.py  retry.py  stream.py
src/floe_guard/integrations/: __init__.py  anthropic.py  crewai.py  gemini.py  langchain.py  langgraph.py  litellm.py  livekit.py  openai.py  pipecat.py
tests/: test_advisory.py  test_anthropic_adapter.py  test_budget_retry.py  test_concurrency.py  test_crewai_adapter.py  test_example.py  test_gemini_adapter.py  test_guard.py  test_hosted.py  test_langchain_adapter.py  test_langchain_groq_adapter.py  test_langgraph_adapter.py  test_latency.py  test_litellm_adapter.py  test_livekit_adapter.py  test_openai_adapter.py  test_pipecat_integration.py  test_pricing.py  test_spend_log.py  test_stream_guard.py  test_tool_costs.py
